Added content in the html and added the font and body css.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
     <title>Sticky Navbar</title>
 </head>
 <body>
-    <header>
-        
-    </header>
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="/index.html"> Dewey, Chatham, and Howe</a></h1>
+            <ul>
+                <li><a href="#" class="active"> Home </a></li>
+                <li><a href="#"> About </a></li>
+                <li><a href="#"> Services </a></li>
+                <li><a href="#"> Contact </a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome To Dewey, Chatham, and Howe</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam similique, temporibus perferendis ullam adipisci culpa! Modi eum officiis similique vitae.</p>
+        </div>
+    </div>
+
+    <section class="container content">
+        <h2> Our Services </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quam nobis! Facilis quod at non quia quibusdam similique natus, mollitia molestiae quaerat vero? Voluptas accusantium alias iste aperiam ea fugit vel quaerat totam eos nisi! Laborum, vel ullam pariatur error expedita itaque dolor. Eius molestias tenetur vero ad iste earum minima tempore dolorum ullam culpa eligendi est cum assumenda qui, reprehenderit quaerat incidunt dignissimos illum eos adipisci eveniet, quidem provident animi ratione. Quos rem ullam iusto, deleniti nostrum porro deserunt nesciunt laudantium tenetur earum voluptatem consequuntur, quaerat repellendus quo provident! Expedita repellendus qui eveniet provident a? Consectetur explicabo autem perferendis asperiores itaque facilis velit sed nulla earum, exercitationem qui minima modi, ex dolorum omnis quis eligendi temporibus quam, maiores nobis pariatur molestiae? Voluptates voluptas tenetur autem ad, saepe ipsum eos, nulla delectus iste ab dolorem quae. Quae optio unde impedit aliquid velit assumenda consequuntur quaerat atque, fugit id expedita cum, tempora, asperiores omnis. Non voluptatibus magni corrupti rerum animi repellat facere ipsam, alias officia reprehenderit, repudiandae nam consequatur ut eveniet eaque asperiores? Deserunt beatae ratione inventore laboriosam modi at aperiam adipisci ducimus numquam odit quia minus, officia possimus, corrupti dicta natus temporibus voluptatem perferendis, dolores quod consequatur? Voluptates, odit consequatur.
+        </p>
+
+        <h3> Our Location</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia maiores esse eum, repellendus quis reiciendis alias provident, recusandae repellat expedita, libero sapiente. Porro, dolorum. Ad maiores dicta magni voluptatibus dignissimos delectus! Nemo obcaecati necessitatibus voluptatibus. Debitis voluptates, reprehenderit consequuntur suscipit molestiae repellat commodi dicta quo sequi aut placeat, quibusdam sit!</p>
+    </section>
+
+    
 
 
 
