Noticed an error with the image not coming up on the page. Experimenting with what will fix that.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Sticky Navbar</title>
 </head>
 <body>
-    <nav class="nav">
-        <div class="container">
+    <nav class="container">
+        <div class="nav">
             <h1 class="logo"><a href="/index.html"> Dewey, Chatham, and Howe</a></h1>
             <ul>
                 <li><a href="#" class="current"> Home </a></li>
@@ -20,6 +20,8 @@
             </ul>
         </div>
     </nav>
+
+    <!-- <img src="tingey-injury-law-firm-S2rcAJbBxX0-unsplash (1).jpg" alt="image"> -->
 
     <div class="hero">
         <div class="container">
